--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,9 +29,9 @@ jobs:
         id: extract
         run: |
           TAG=${{ github.ref_name }}
-          PACKAGE="${TAG%-*}"  # react-v0.1.0 -> react
-          echo "package=${PACKAGE}" >> $GITHUB_OUTPUT
-          echo "Extracted package: ${PACKAGE}"
+          PACKAGE=$(echo "$TAG" | sed 's/-v.*//')
+          echo "package=$PACKAGE" >> $GITHUB_OUTPUT
+          echo "Extracted package: $PACKAGE"
 
       - name: Build package
         run: cd ${{ steps.extract.outputs.package }} && bun run build
