--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         uses: oven-sh/setup-bun@v1
 
       - name: Install dependencies
-        run: bun install
+        run: bun install --frozen-lockfile
 
       - name: Extract package name from tag
         id: extract
@@ -32,6 +32,13 @@ jobs:
           PACKAGE=$(echo "$TAG" | sed 's/-v.*//')
           echo "package=$PACKAGE" >> $GITHUB_OUTPUT
           echo "Extracted package: $PACKAGE"
+
+      - name: Debug - Verify types installed
+        run: |
+          echo "Checking for @types/node..."
+          ls -la node_modules/@types/ 2>/dev/null || echo "@types directory not found"
+          echo "Checking package.json..."
+          cat react/package.json | grep -A5 devDependencies || echo "devDependencies not found"
 
       - name: Build package
         run: cd ${{ steps.extract.outputs.package }} && bun run build
