--- a/react/server/tsconfig.build.json
+++ b/react/server/tsconfig.build.json
@@ -8,9 +8,10 @@
     "noEmit": false,
     "emitDeclarationOnly": false,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node",
     "target": "ES2022",
     "lib": ["ES2022"],
+    "types": ["node"],
     "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
