--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/utilsio/sdks.git"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "typescript": "^5"
   }
 }
