--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/react": "^18",
+    "react": "^18",
     "typescript": "^5"
   }
 }
