fix: correct GitHub Actions workflow syntax for npm OIDC publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - 'react-v*'      # react-v0.1.0, react-v0.1.1, etc.
-      - 'vue-v*'        # Future: vue-v0.1.0, etc.
 
 permissions:
   id-token: write       # Required for OIDC token generation
@@ -18,6 +17,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Setup Node for npm
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
