--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ on:
 
 permissions:
   id-token: write       # Required for OIDC token generation
-  contents: read
+  contents: write       # Required for creating GitHub releases
 
 jobs:
   publish:
