feat: add React SDK release automation
Features:
- Add release-sdk.sh script for automated versioning and tagging
- Configure npm tag-version-prefix=react-v for correct tag format
- Create publishReact.yml workflow (npm-only, hardcoded for React SDK)
- Add comprehensive RELEASE_GUIDE.md documentation

Workflow:
- release-sdk.sh handles: version bump, git commit, tag creation, push
- publishReact.yml triggers on react-v* tags and publishes to npm
- Submodule references automatically updated in main repo

Configuration:
- react/.npmrc: tag-version-prefix=react-v (for react-v0.1.4 format)
- publishReact.yml: hardcoded for @utilsio/react, npm registry only
- Removed old generic publish.yml (replaced by React-specific workflow)

Usage:
  ./release-sdk.sh react patch   # Bump 0.1.3 → 0.1.4
  ./release-sdk.sh react minor   # Bump 0.1.3 → 0.2.0
  ./release-sdk.sh react major   # Bump 0.1.3 → 1.0.0

--- a/react/package.json
+++ b/react/package.json
@@ -1,8 +1,15 @@
 {
   "name": "@utilsio/react",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Official React SDK for integrating utilsio crypto subscriptions",
-  "keywords": ["react", "crypto", "subscriptions", "polygon", "superfluid", "utilsio"],
+  "keywords": [
+    "react",
+    "crypto",
+    "subscriptions",
+    "polygon",
+    "superfluid",
+    "utilsio"
+  ],
   "author": "utilsio",
   "license": "Apache-2.0",
   "repository": {
