fix: fix version management and npm version hanging
Issues Fixed:
- Replace npm version command with manual version bumping (avoids bun npm compatibility hang)
- Update update-template script to use dynamic version glob (utilsio-react-*.tgz)
- This allows updating templates with any SDK version without hardcoding

Changes:
- release-sdk.sh: Implement manual semantic versioning calculation (patch/minor/major)
  * Parses current version from package.json
  * Calculates new version based on type
  * Updates package.json directly (no npm version command)
  * Creates commit and tag manually
  * No more hanging when using bun

- react/package.json: Update update-template script
  * Old: cp utilsio-react-0.1.0.tgz ../../templates/nextjs/
  * New: cp utilsio-react-*.tgz ../../templates/nextjs/utilsio-react-latest.tgz
  * Now works with any version number

Workflow Impact:
- ./release-sdk.sh react patch works immediately (no hanging)
- Templates automatically get latest SDK version via glob matching
- No more hardcoded version dependencies

--- a/react/package.json
+++ b/react/package.json
@@ -40,7 +40,7 @@
     "build:client": "tsc -p client/tsconfig.build.json",
     "clean": "rm -rf server/dist client/dist",
     "pack:local": "bun run build && bun pm pack",
-    "update-template": "bun run pack:local && cp utilsio-react-0.1.0.tgz ../../templates/nextjs/",
+    "update-template": "bun run pack:local && cp utilsio-react-*.tgz ../../templates/nextjs/utilsio-react-latest.tgz",
     "prepublishOnly": "bun run build"
   }
 }
