--- a/.github/workflows/publishReact.yml
+++ b/.github/workflows/publishReact.yml
@@ -30,7 +30,7 @@ jobs:
         uses: oven-sh/setup-bun@v1
 
       - name: Install dependencies
-        run: bun install
+        run: cd react && bun install
 
       - name: Extract version from tag
         id: extract
