--- a/react/server/tsconfig.build.json
+++ b/react/server/tsconfig.build.json
@@ -10,7 +10,7 @@
     "module": "ESNext",
     "moduleResolution": "node",
     "target": "ES2022",
-    "lib": ["ES2022"],
+    "lib": ["ES2022", "DOM"],
     "skipLibCheck": true,
     "strict": true,
     "esModuleInterop": true,
