chore: update package.json with react dependencies

--- a/react/package.json
+++ b/react/package.json
@@ -31,8 +31,7 @@
   "files": [
     "server/dist",
     "client/dist",
-    "README.md",
-    "LICENSE"
+    "README.md"
   ],
   "scripts": {
     "build": "bun run build:server && bun run build:client",
